# code-dataset

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  config.example.yaml  pyproject.toml
src/code_dataset/: __init__.py  cli.py  config.py
src/code_dataset/enrichment/: classifier.py  description_gen.py  quality_scorer.py  signatures.py
src/code_dataset/extraction/: context_builder.py  diff_parser.py  git_extractor.py  merge_detector.py  models.py  squash_detector.py
src/code_dataset/filtering/: dedup.py  heuristics.py  quality_filter.py  security_filter.py
src/code_dataset/formatting/: context_window.py  dpo_formatter.py  rl_formatter.py  sft_formatter.py
src/code_dataset/lm/: anthropic_lm.py  anthropic_types.py  factory.py  google_lm.py  models.py
src/code_dataset/oauth/: __init__.py  anthropic.py  base.py  google.py  manager.py
src/code_dataset/utils/: language_detect.py  stats.py
