[project]
name = "code-dataset"
version = "0.1.0"
description = "Extract training datasets (SFT, DPO, RL) from git repository history"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "dspy>=3.1.3",
    "anthropic>=0.86.0",
    "httpx>=0.28.1",
    "gitpython>=3.1.46",
    "typer>=0.24.1",
    "rich>=14.3.3",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[project.scripts]
code-dataset = "code_dataset.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_dataset"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
